# insurance-multilevel

./: CHANGELOG.md  README.md  pyproject.toml  run_databricks_pytest.py
benchmarks/: benchmark.py
notebooks/: benchmark.py  multilevel_demo.py
src/insurance_multilevel/: __init__.py  _diagnostics.py  _model.py  _reml.py  _types.py
tests/: conftest.py  test_bug_fixes.py  test_bug_fixes_batch3.py  test_coverage_april2026.py  test_diagnostics.py  test_model.py  test_reml.py  test_types.py
