[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-multilevel"
version = "0.1.2"
description = "Two-stage CatBoost + REML random effects model for insurance pricing with high-cardinality group factors"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "actuarial",
    "multilevel",
    "random effects",
    "catboost",
    "insurance",
    "credibility",
    "REML",
    "Buhlmann-Straub",
    "hierarchical",
    "pricing",
    "broker",
    "scheme",
    "UK",
    "personal lines",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "polars>=1.0",
    "catboost>=1.2",
    "scipy>=1.10",
    "pyarrow>=23.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyarrow>=12.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-multilevel"
Repository = "https://github.com/burning-cost/insurance-multilevel"
Issues = "https://github.com/burning-cost/insurance-multilevel/issues"
Documentation = "https://github.com/burning-cost/insurance-multilevel#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_multilevel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/insurance_multilevel"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
